--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
     <button id="stop-button" disabled>Stop Scanner</button>
   </div>
 
+  <!-- Ensure this script is loaded first -->
   <script src="lib/quagga.min.js"></script>
+
   <script>
     const startButton = document.getElementById('start-button');
     const stopButton = document.getElementById('stop-button');
