--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
 
   <!-- ZXing Library -->
-  <script src="https://unpkg.com/@zxing/browser@0.0.9/umd/index.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/@zxing/browser@0.1.1/umd/index.min.js"></script>
   <script>
     const startButton = document.getElementById('start-button');
     const stopButton = document.getElementById('stop-button');
