--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
             margin: auto;
             padding-top: 75%; /* 4:3 Aspect Ratio (height/width = 0.75) */
             background: #000;
+            overflow: hidden;
         }
-        /* Video and overlay canvas positioning */
-        #video, #overlay {
+        /* Overlay canvas positioning */
+        #overlay {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
+            pointer-events: none; /* Allow clicks to pass through */
         }
         /* Start Scanner button styling */
         #start-button {
@@ -37,9 +39,8 @@
     <!-- Start Scanner Button -->
     <button id="start-button">Start Scanner</button>
 
-    <!-- Scanner Container with Video and Overlay -->
+    <!-- Scanner Container with Overlay -->
     <div id="scanner-container">
-        <video id="video" autoplay muted></video>
         <canvas id="overlay"></canvas>
     </div>
 
@@ -57,7 +58,7 @@
                 inputStream: {
                     name: "Live",
                     type: "LiveStream",
-                    target: document.querySelector('#video'), // Video element
+                    target: document.querySelector('#scanner-container'), // Use the container div
                     constraints: {
                         facingMode: "environment", // Use rear camera
                         width: { ideal: 640 },
@@ -75,18 +76,10 @@
                     bottom: "0%"  // Bottom offset
                 },
                 debug: {
-                    showCanvas: true, // Show the canvas overlay
-                    showPatches: false,
-                    showFoundPatches: false,
-                    showSkeleton: false,
-                    showLabels: false,
-                    showPatchLabels: false,
-                    showRemainingPatchLabels: false,
-                    boxFromPatches: {
-                        showTransformed: false,
-                        showTransformedBox: false,
-                        showBB: false
-                    }
+                    drawBoundingBox: false, // Disable Quagga's bounding box
+                    showFrequency: false,
+                    drawScanline: false,
+                    showPattern: false
                 }
             }, function(err) {
                 if (err) {
@@ -108,13 +101,15 @@
                 startButton.disabled = false; // Re-enable the button
             });
 
-            // Optional: Handle errors during scanning
+            // Handle processed frames for debugging and overlay
             Quagga.onProcessed(function(result) {
                 const overlay = document.getElementById('overlay');
                 const context = overlay.getContext('2d');
+
                 if (result) {
                     // Clear previous drawings
                     context.clearRect(0, 0, overlay.width, overlay.height);
+
                     if (result.boxes) {
                         result.boxes.filter(function(box) {
                             return box !== result.box;
@@ -124,11 +119,13 @@
                             context.strokeRect(box[0].x, box[0].y, box[2].x - box[0].x, box[2].y - box[0].y);
                         });
                     }
+
                     if (result.box) {
                         context.strokeStyle = "#FF0000";
                         context.lineWidth = 2;
                         context.strokeRect(result.box[0].x, result.box[0].y, result.box[2].x - result.box[0].x, result.box[2].y - result.box[0].y);
                     }
+
                     if (result.codeResult && result.codeResult.code) {
                         context.font = "18px Arial";
                         context.fillStyle = "#FF0000";
@@ -136,6 +133,20 @@
                     }
                 }
             });
+
+            // Resize the overlay canvas to match the video stream
+            function resizeOverlay() {
+                const overlay = document.getElementById('overlay');
+                const scannerContainer = document.getElementById('scanner-container');
+                overlay.width = scannerContainer.clientWidth;
+                overlay.height = scannerContainer.clientHeight;
+            }
+
+            // Initial resize
+            resizeOverlay();
+
+            // Resize on window resize
+            window.addEventListener('resize', resizeOverlay);
         });
     </script>
 </body>
